...
            (needsCurrentPassword && !currentPassword)
          }
        >
          Set Password
        </Button>
        <Button mode="text" onPress={() => logout()} disabled={loading}>
          Log Out
        </Button>
      </View>
    </>
  );
};

...
