...
  };

  return (
    <>
      <Appbar.Header>
        <Appbar.BackAction onPress={() => navigation.goBack()} color={theme.colors.onSurface} />
        <Appbar.Content title="Log In" />
      </Appbar.Header>
      <View style={styles.container}>
        <TextInput
          testID="email-input"
          label="Email"
          autoCapitalize="none"
...
